--- a/demo/deployment.yaml
+++ b/demo/deployment.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: cla-frontend
+  name: nginx-deployment
   namespace: argocd-demo
 spec:
   replicas: 1
